--- a/css/index.css
+++ b/css/index.css
@@ -136,5 +136,58 @@ button:hover{
 }
 
 @media(max-width: 500px) {
+    .artists-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 35%;
+    }
+
+    .artist{
+        width: 100vw;
+        margin: 1% 30%;
+    }
+
+    nav{
+        display: flex;
+        justify-content: space-evenly;
+        width: 40%;
+    }
+
+    nav a{
+        font-size: 1.5rem;
+    }
+
+    nav span{
+        border-left: 2.2px solid #626262;
+    }
+
+    .title-container{
+        width: 100;
+        margin: 0%;
+    }
+
+    button{
+        font-size: 1.6rem;
+        border-radius: 0px;
+        margin: 1% auto;
+    }
+
+    .title-container div{
+        width: 100%;
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');
+        background-size: inherit;
+    }
+
+    .title-container h1 {
+        font-size: 3.5rem;
+        letter-spacing: 1px;
+        font-style: bold;
+        line-height: 120%;
+    }
     
+    .title-container button {
+        font-size: 1.3rem;
+        padding:1% 5%;
+    }
 }
