--- a/css/index.css
+++ b/css/index.css
@@ -140,12 +140,11 @@ button:hover{
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 35%;
+        width: 100%;
     }
 
     .artist{
-        width: 100vw;
-        margin: 1% 30%;
+        width: auto;
     }
 
     nav{
