--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ padding: 0;
 border: 0;  
 font-size: 100%;  
 font: inherit;  
-vertical-align: baseline;  
+vertical-align: baseline; 
 }
 /*GENERAL STYLES*/
 html{
@@ -136,15 +136,31 @@ button:hover{
 }
 
 @media(max-width: 500px) {
+
+    .title-container div {	
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');
+    }
+    
     .artists-container{
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100%;
+        width: 90%;
+    }
+
+    .artist img{
+        width: 70%;
+        height: 30vh;
     }
 
     .artist{
-        width: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bio{
+        font-size: 1.5rem;
     }
 
     nav{
